# FullCarSimulation

./: .gitignore  AI_CONTEXT.md  CODING_STANDARDS.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  README.md  UNITY_INTEGRATION.md  copilotPlan.md  copilotPlan.txt
data/vehicles/: TBReCar.txt
include/: README.md  unity_api.h
include/control/: control.h
include/core/integrator/: integrator_base.h  runge_kutta4.h  semi_implicit_euler.h
include/core/math/: frames.h  mat3.h  math_base.h  quat.h  vec3.h
include/core/physics/: README.md  constraints.h  dynamics_solver.h  equations_of_motion.h
include/core/utils/: logger.h
include/input/: control.h
include/sensors/: sensors.h
include/simulation/: sim.h  simulation_config.h  simulation_loop.h  telemetry.h
include/tire_models/: README.md  brush_models.h  magic_formula.h  tire_utilities.h
include/track/: friction_map.h  track.h  track_geometry.h  track_surface.h
include/vehicle/: README.md  aerodynamics.h  brakes.h  driveline.h  sprung_mass.h  steering.h  suspension.h  tire.h  unsprung_mass.h  vehicle.h  vehicle_congruence.h  vehicle_constitutive.h  vehicle_equilibrium.h  vehicle_model.h  vehicle_parameters.h  wheel.h
src/: api.c  unity_api.c
src/core/integrator/: integrator_base.c  runge_kutta4.c  semi_implicit_euler.c
src/core/math/: frames.c  mat3.c  math_base.c  quat.c  vec3.c
src/core/physics/: constraints.c  dynamics_solver.c  equations_of_motion.c
src/core/utils/: logger.c
src/input/: control.c
src/math/: frames.c  mat3.c  math_base.c  quat.c  vec3.c
src/simulation/: sim.c  simulation_loop.c  telemetry.c
src/tire_models/: brush_models.c  magic_formula.c  tire_utilities.c
src/track/: friction_map.c  track_geometry.c  track_surface.c
src/vehicle/: aerodynamics.c  brakes.c  driveline.c  sprung_mass.c  steering.c  suspension.c  tire.c  unsprung_mass.c  vehicle.c  vehicle_congruence.c  vehicle_constitutive.c  vehicle_equilibrium.c  vehicle_model.c  vehicle_parameters.c  wheel.c
unityInterface/: CMakeLists.txt  DEBUG_README.md  QUICK_REFERENCE.md  build_debug.bat  build_output.txt  run_debug.bat
unityInterface/include/: sim_api.h
unityInterface/src/: debug_main.c  sim_api.c
